@@ -30,6 +30,8 @@ CLIENT
 	- client will no longer send blank messages
 
 SERVER
+[12:02AM 5/11/2013]
+	- if the username the user is connecting with is already in use they will be denied
 [11:50PM 5/10/2013]
 	- /nick no longer works if the username is registered (TODO: allow authenticating as it?)
 [11:41PM 5/10/2013]
